--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1> <img src="/Imagens/Quentinha.png" alt=""></h1>
+        <h1> <img src="./Imagens/Quentinha.png" alt=""></h1>
         <nav>
             <ul>              
                 <li><a href="index.html">Home</a></li>
